assets/css/style.css
/* ... */
.container {
  margin: auto;
  width: 100%;
  max-width: 1280px;
}

.container-small {
  margin: auto;
  width: 100%;
  max-width: 768px;
}

.page-hero,
.page-section {
  padding: 36px 24px;
}

.footer__content {
  padding: 32px 24px;
}

/**
 * #3.0 Header
 */

.header {
  position: fixed;
  background-color: var(--color-neutral-100);
  width: 100%;
  z-index: 9999;
}

.header-content {
  display: flex;
  flex-wrap: wrap;
  margin: auto;
  padding: 0 24px;
  max-width: 1200px;
}

.branding {
  flex: 50% 1 1;
  position: relative;
  z-index: 30;
}

.logo img {
  padding: 16px 0;
  width: 116px;
}

.navigation {
  width: 100%;
  height: 0;
  opacity: 0;
  overflow: hidden;
  z-index: 20;
}

.mobile-menu-toggle {
  display: flex;
  flex: 50% 1 1;
  justify-content: flex-end;
  align-items: center;
  position: relative;
  z-index: 30;
}

.mobile-menu-toggle input {
  display: none;
}

.header:has(.mobile-menu-toggle input:checked) .navigation {
  height: 100%;
  opacity: 1;
  transition: all 0.2s ease-in-out;
}

.menu {
  padding: var(--spacing-lg) 0;
  list-style-type: none;
}

.menu li a {
  display: inline-block;
  position: relative;
  padding: 4px 8px;
  color: var(--color-secondary-700);
  font-size: 42px;
  font-weight: bold;
  text-transform: uppercase;
  text-decoration: none;
}

/* Link hover animation */

.menu li a::after {
  content: "";
  display: block;
  position: absolute;
  left: 0;
  bottom: 14px;
  background: var(--color-primary-200);
  width: 0;
  height: 16px;
  z-index: -1;
}
.menu li a:hover::after {
  width: 100%;
  transition: width 0.2s;
}

/**
 * #4.0 Footer
 */

.footer {
  /* padding-top: 40px; */
}

/* Newsletter */

.newsletter {
  padding: 36px 24px;
}

.newsletter label,
.newsletter__header h3,
.newsletter__header {
  color: white;
}

.newsletter__header {
  text-align: center;
}

/* Social Links */

.social-links {
  display: flex;
  justify-content: center;
  margin-bottom: var(--spacing-md);
}

.social-link {
  background-color: var(--color-neutral-200);
  width: 32px;
  margin-right: 24px;
  transition: background-color 0.3s ease-in-out;
}

.social-link:hover {
  background-color: var(--color-primary-400);
}

.social-link:last-child {
  margin-right: 0;
}

.social-link__twitter {
  -webkit-mask: url("../images/icon-social-twitter.svg") no-repeat center;
  mask: url("../images/icon-social-twitter.svg.svg") no-repeat center;
}

.social-link__facebook {
  -webkit-mask: url("../images/icon-social-facebook.svg") no-repeat center;
  mask: url("../images/icon-social-facebook.svg.svg") no-repeat center;
}

.social-link__instagram {
  -webkit-mask: url("../images/icon-social-instagram.svg") no-repeat center;
  mask: url("../images/icon-social-instagram.svg.svg") no-repeat center;
}

/* Secondary Links */

.secondary-links {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.secondary-links li::after {
  content: "\00B7";
  margin: 0 8px;
  color: var(--color-link-light);
}

.secondary-links li:last-child::after {
  content: none;
}

.secondary-links li a {
  font-size: 14px;
}

/* Copyright */

.copyright {
  display: flex;
  justify-content: center;
  padding: 16px 36px;
  color: var(--color-text-light);
}

.copyright p {
  margin: 0;
}

/**
 * #5.0 Pages
 */

/* #5.1 Home */

.home-hero {
  padding: 64px 24px 36px 24px;
}

.home-webinar {
  padding: 96px 24px;
}
.home-webinar__future {
  padding-bottom: 36px;
  display: flex;
  flex-direction: column-reverse;
}
.home-webinar__change {
}
.home-webinar__icons {
  padding-top: 36px;
  padding-bottom: 36px;
}
.home-webinar__cta {
  display: flex;
  justify-content: center;
}

.home-hero__image,
.home-about__image,
.home-webinar__future__image,
.home-webinar__change__image {
  margin-bottom: 32px;
}

.home-about {
  display: flex;
  flex-direction: column-reverse;
  padding: 96px 24px;
}

.home-ready {
  padding: 64px 24px;
}

.home-ready__content {
  text-align: center;
}

/* #5.2 Webinar */

.webinar-hero,
.webinar-agenda,
.webinar-host,
.webinar-faq,
.webinar-testimonials,
.webinar-form {
  padding: 36px 24px;
}

/* #5.3 About */

.about-hero,
.about-alex,
.about-vision,
.about-transformation {
  padding: 36px 24px;
}

/* #5.4 Contact */

.contact-hero,
.contact-form {
  padding: 36px 24px;
}

/**
 * #6.0 Components
 */

/**
 * #6.1 Buttons
 */

.buttons {
  display: flex;
  gap: 16px;
}
.button {
  display: inline-block;
  padding: 12px 24px;
  border: none;
  border-radius: 8px;
  font-size: 16px;
  font-weight: normal;
}
.button--primary {
  background-color: var(--color-primary-600);
  color: white;
  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
}
.button--primary:hover {
  background-color: var(--color-primary-800);
  color: var(--color-primary-50);
}
.button--outline-light {
  padding: 10px 22px;
  background-color: transparent;
  border: 2px solid white;
  color: white;
  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
}
.button--outline-light:hover {
  background-color: var(--color-primary-600);
  color: white;
}
.button--secondary {
  background-color: var(--color-secondary-600);
  color: white;
  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
}
.button--secondary:hover {
  background-color: var(--color-secondary-800);
  color: white;
}
.button--margin {
  margin-bottom: 32px;
}

/* Custom Icons */

.icon-text {
  display: flex;
  align-items: center;
  flex-direction: column;
  text-align: center;
  padding: 14px;
}
.icon-text__icon {
  display: block;
  width: 140px;
  height: 140px;
  background: var(--color-primary-400);
}
.icon-text--negative {
  -webkit-mask: url("../images/icon-mindset-negative.svg") no-repeat center;
  mask: url("../images/icon-mindset-negative.svg") no-repeat center;
}
/* ... */

